--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <h2>"TTE. DE INGS. JUAN DE LA BARRERA"</h2>   
         <nav>
             <ul>
-                <li>Historia</li>
+                <li><a href="./documentos/Acerca_de_nosotros.pdf">Historia</a></li>
                 <li>directivos</li>
                 <li>comunicados</li>
                 <li>contacto</li>
-                <li>a1</li>
+                <li><a href="./documentos/Principios_estrategicos_2020.pdf">Principios Estrategicos 2020</a></li>
                 <li>a2</li>
             </ul>
         </nav>
